# terraform-provider-n8n

./: .bazelrc  .codacy.yml  .coderabbit.yml  .commitlintrc.json  .env.example  .gitguardian.yaml  .gitignore  .golangci.bck.yml  .golangci.yml  .goreleaser.yml  .ktn-linter.yml  .markdownlintignore  .prettierignore  .prettierrc.json  .releaserc.yml  ARCHITECTURE.md  BUILD.bazel  CHANGELOG.md  CLAUDE.md  CLEANUP_RECOMMENDATIONS.md  CONTRIBUTING.md  COVERAGE.MD  CREDENTIALS_API_ANALYSIS.md  CREDENTIALS_WORKAROUND_ANALYSIS.md  CREDENTIAL_ROTATION_DESIGN.md  GPG_SETUP.md  ISSUES.md  LICENSE  LICENSE.md  MISSING_RESOURCES_ANALYSIS.md  MODULE.bazel  Makefile  NODES_SYNC_PROGRESS.md  PROVIDER_STATUS.md  README.md  STRUCT_CORRECTIONS_SUMMARY.md  SUPPORTED_NODES.md  TERRAFORM_REGISTRY.md  TERRAFORM_SDK_INTEGRATION.md  codacy_issues_analysis.json  (+13 more)
sdk/n8nsdk/: .openapi-generator-ignore  BUILD.bazel  README.md  api_audit.go  api_credential.go  api_execution.go  api_projects.go  api_source_control.go  api_tags.go  api_user.go  api_variables.go  api_workflow.go  client.go  configuration.go  go.mod  go.sum  model__audit_post_request.go  model__audit_post_request_additional_options.go  model__credentials__id__transfer_put_request.go  model__executions__id__retry_post_request.go  model__projects__project_id__users__user_id__patch_request.go  model__projects__project_id__users_post_request.go  model__projects__project_id__users_post_request_relations_inner.go  model__users__id__role_patch_request.go  model__users_post_201_response.go  model__users_post_201_response_user.go  model__users_post_request_inner.go  model__workflows__id__transfer_put_request.go  model_audit.go  model_create_credential_response.go  model_credential.go  model_credential_type.go  model_error.go  model_error_0.go  model_execution.go  model_execution_list.go  model_import_result.go  model_import_result_credentials_inner.go  model_import_result_tags.go  model_import_result_tags_mappings_inner.go  (+25 more)
sdk/n8nsdk/api/: openapi-generated.yaml  openapi.patch  openapi.yaml
sdk/n8nsdk/docs/: Audit.md  AuditAPI.md  AuditPostRequest.md  AuditPostRequestAdditionalOptions.md  CreateCredentialResponse.md  Credential.md  CredentialAPI.md  CredentialType.md  CredentialsIdTransferPutRequest.md  Error.md  Execution.md  ExecutionAPI.md  ExecutionList.md  ExecutionsIdRetryPostRequest.md  ImportResult.md  ImportResultCredentialsInner.md  ImportResultTags.md  ImportResultTagsMappingsInner.md  ImportResultVariables.md  ImportResultWorkflowsInner.md  ModelError.md  Node.md  Project.md  ProjectIcon.md  ProjectList.md  ProjectsAPI.md  ProjectsProjectIdUsersPostRequest.md  ProjectsProjectIdUsersPostRequestRelationsInner.md  ProjectsProjectIdUsersUserIdPatchRequest.md  Pull.md  Role.md  SharedWorkflow.md  SharedWorkflowProject.md  SharedWorkflowProject1.md  SourceControlAPI.md  Tag.md  TagIdsInner.md  TagList.md  TagsAPI.md  User.md  (+16 more)
sdk/n8nsdk/test/: BUILD.bazel  api_audit_test.go  api_credential_test.go  api_execution_test.go  api_projects_test.go  api_source_control_test.go  api_tags_test.go  api_user_test.go  api_variables_test.go  api_workflow_test.go
src/: BUILD.bazel  main.go  main_internal_test.go  main_test.go  tools.go
src/cmd/: BUILD.bazel  cmd.go  cmd_test.go  root.go  root_external_test.go  root_internal_test.go  root_test.go
src/internal/provider/: BUILD.bazel  model.go  provider.go  provider_external_test.go  provider_internal_test.go  provider_test.go  testing_acceptance.go
src/internal/provider/credential/: BUILD.bazel  credential_workflow_backup.go  helpers.go  helpers_internal_test.go  helpers_test.go  models.go  resource.go  resource_acceptance_test.go  resource_external_test.go  resource_internal_test.go  resource_test.go  transfer_models.go  transfer_resource.go  transfer_resource_external_test.go  transfer_resource_internal_test.go  transfer_resource_test.go
src/internal/provider/datasources/: BUILD.bazel  datasources.go  execution.go  executions.go  project.go  projects.go  tag.go  tags.go  user.go  users.go  variable.go  variables.go  workflow.go  workflows.go
src/internal/provider/execution/: BUILD.bazel  datasource.go  datasource_external_test.go  datasource_internal_test.go  datasource_test.go  datasources.go  datasources_external_test.go  datasources_internal_test.go  datasources_test.go  execution_datasource_model.go  execution_item_model.go  executions_datasource_model.go  helpers.go  helpers_internal_test.go  helpers_test.go  models.go  retry_resource.go  retry_resource_external_test.go  retry_resource_internal_test.go  retry_resource_test.go
src/internal/provider/project/: BUILD.bazel  datasource.go  datasource_external_test.go  datasource_internal_test.go  datasource_test.go  datasources.go  datasources_external_test.go  datasources_internal_test.go  datasources_test.go  helpers.go  helpers_comprehensive_internal_test.go  helpers_internal_test.go  helpers_test.go  models.go  project_datasource_model.go  project_item_model.go  projects_datasource_model.go  resource.go  resource_acceptance_test.go  resource_external_test.go  resource_internal_test.go  resource_test.go  user_models.go  user_resource.go  user_resource_external_test.go  user_resource_internal_test.go  user_resource_test.go
src/internal/provider/resources/: BUILD.bazel  credential.go  credential_transfer.go  execution_retry.go  project.go  project_user.go  resources.go  source_control_pull.go  tag.go  user.go  variable.go  workflow.go  workflow_transfer.go
src/internal/provider/shared/: BUILD.bazel  copyright_test.go  copyright_verify.go  pointers.go  pointers_external_test.go  pointers_test.go  test_hook.go
src/internal/provider/sourcecontrol/: BUILD.bazel  models.go  pull_resource.go  pull_resource_external_test.go  pull_resource_internal_test.go  pull_resource_test.go
src/internal/provider/tag/: BUILD.bazel  datasource.go  datasource_external_test.go  datasource_internal_test.go  datasource_test.go  datasources.go  datasources_external_test.go  datasources_internal_test.go  datasources_test.go  helpers.go  helpers_internal_test.go  (+10 more)
(+1022 files in other folders)
