module(
    name = "n8n_terraform_provider",
    version = "1.0.0",
)

# Go rules - Latest version with Bazel 9 xcode_config fix
bazel_dep(name = "rules_go", version = "0.58.3")
bazel_dep(name = "gazelle", version = "0.46.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "bazel_features", version = "1.33.0")

# Go dependencies from go.mod
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
go_deps.gazelle_override(
    directives = [
        "gazelle:proto disable",
        "gazelle:resolve proto go tfplugin5.proto //tfprotov5/internal/tfplugin5",
        "gazelle:resolve proto go tfplugin6.proto //tfprotov6/internal/tfplugin6",
    ],
    path = "github.com/hashicorp/terraform-plugin-go",
)

# All direct dependencies need to be registered
use_repo(
    go_deps,
    "com_github_hashicorp_terraform_plugin_docs",
    "com_github_hashicorp_terraform_plugin_framework",
)

# Register Go toolchain - use specific version to avoid Bazel 9.0.0rc1 host detection bug
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.0")
