load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "n8n_lib",
    srcs = ["main.go"],
    importpath = "github.com/kodflow/n8n/src",
    visibility = ["//visibility:private"],
    deps = [
        "//src/internal/provider",
        "@com_github_hashicorp_terraform_plugin_framework//providerserver:go_default_library",
    ],
)

go_binary(
    name = "terraform-provider-n8n",
    embed = [":n8n_lib"],
    visibility = ["//visibility:public"],
)
