load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "n8n_lib",
    srcs = ["main.go"],
    importpath = "github.com/kodflow/n8n/src",
    visibility = ["//visibility:private"],
    deps = [
        "//src/cmd",
    ],
)

go_binary(
    name = "terraform-provider-n8n",
    embed = [":n8n_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "n8n_test",
    srcs = ["main_test.go"],
    embed = [":n8n_lib"],
    deps = [
        "//src/cmd",
        "@com_github_hashicorp_terraform_plugin_framework//provider:go_default_library",
        "@com_github_hashicorp_terraform_plugin_framework//providerserver:go_default_library",
    ],
)
