load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "src_lib",
    srcs = ["main.go"],
    importpath = "github.com/kodflow/n8n/src",
    visibility = ["//visibility:private"],
    deps = ["//src/cmd"],
)

go_binary(
    name = "terraform-provider-n8n",
    embed = [":src_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "src_test",
    srcs = ["main_internal_test.go"],
    embed = [":src_lib"],
    deps = [
        "//src/cmd",
        "@com_github_hashicorp_terraform_plugin_framework//provider",
        "@com_github_hashicorp_terraform_plugin_framework//providerserver",
    ],
)
