load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "n8nsdk",
    srcs = [
        "api_audit.go",
        "api_credential.go",
        "api_execution.go",
        "api_projects.go",
        "api_source_control.go",
        "api_tags.go",
        "api_user.go",
        "api_variables.go",
        "api_workflow.go",
        "client.go",
        "configuration.go",
        "model__audit_post_request.go",
        "model__audit_post_request_additional_options.go",
        "model__credentials__id__transfer_put_request.go",
        "model__executions__id__retry_post_request.go",
        "model__projects__project_id__users__user_id__patch_request.go",
        "model__projects__project_id__users_post_request.go",
        "model__projects__project_id__users_post_request_relations_inner.go",
        "model__users__id__role_patch_request.go",
        "model__users_post_201_response.go",
        "model__users_post_201_response_user.go",
        "model__users_post_request_inner.go",
        "model__workflows__id__transfer_put_request.go",
        "model_audit.go",
        "model_create_credential_response.go",
        "model_credential.go",
        "model_credential_type.go",
        "model_error.go",
        "model_error_0.go",
        "model_execution.go",
        "model_execution_list.go",
        "model_import_result.go",
        "model_import_result_credentials_inner.go",
        "model_import_result_tags.go",
        "model_import_result_tags_mappings_inner.go",
        "model_import_result_variables.go",
        "model_import_result_workflows_inner.go",
        "model_node.go",
        "model_project.go",
        "model_project_icon.go",
        "model_project_list.go",
        "model_pull.go",
        "model_role.go",
        "model_shared_workflow.go",
        "model_shared_workflow_project.go",
        "model_shared_workflow_project_1.go",
        "model_tag.go",
        "model_tag_ids_inner.go",
        "model_tag_list.go",
        "model_user.go",
        "model_user_list.go",
        "model_variable.go",
        "model_variable_create.go",
        "model_variable_list.go",
        "model_workflow.go",
        "model_workflow_list.go",
        "model_workflow_settings.go",
        "model_workflow_static_data.go",
        "response.go",
        "utils.go",
    ],
    importpath = "github.com/kodflow/n8n/sdk/n8nsdk",
    visibility = ["//visibility:public"],
)
