load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cmd",
    srcs = ["root.go"],
    importpath = "github.com/kodflow/n8n/src/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//src/internal/provider",
        "@com_github_hashicorp_terraform_plugin_framework//provider:go_default_library",
        "@com_github_hashicorp_terraform_plugin_framework//providerserver:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)

go_test(
    name = "cmd_test",
    srcs = ["cmd_test.go"],
    embed = [":cmd"],
    deps = [
        "@com_github_hashicorp_terraform_plugin_framework//provider:go_default_library",
        "@com_github_hashicorp_terraform_plugin_framework//providerserver:go_default_library",
    ],
)
