load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cmd",
    srcs = [
        "cmd.go",
        "root.go",
    ],
    importpath = "github.com/kodflow/n8n/src/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//src/internal/provider",
        "@com_github_hashicorp_terraform_plugin_framework//provider",
        "@com_github_hashicorp_terraform_plugin_framework//providerserver",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_test(
    name = "cmd_test",
    srcs = ["cmd_test.go"],
    deps = [
        ":cmd",
        "@com_github_hashicorp_terraform_plugin_framework//provider",
        "@com_github_hashicorp_terraform_plugin_framework//providerserver",
    ],
)
