load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "provider",
    srcs = [
        "model.go",
        "provider.go",
    ],
    importpath = "github.com/kodflow/n8n/src/internal/provider",
    visibility = ["//src:__subpackages__"],
    deps = [
        "@com_github_hashicorp_terraform_plugin_framework//datasource:go_default_library",
        "@com_github_hashicorp_terraform_plugin_framework//provider:go_default_library",
        "@com_github_hashicorp_terraform_plugin_framework//provider/schema:go_default_library",
        "@com_github_hashicorp_terraform_plugin_framework//resource:go_default_library",
    ],
)

go_test(
    name = "provider_test",
    srcs = ["provider_test.go"],
    embed = [":provider"],
    deps = [
        "@com_github_hashicorp_terraform_plugin_framework//tfsdk:go_default_library",
        "@com_github_hashicorp_terraform_plugin_go//tftypes:go_default_library",
    ],
)
