load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "provider",
    srcs = ["provider.go"],
    importpath = "github.com/kodflow/n8n/src/internal/provider",
    visibility = ["//src:__subpackages__"],
    deps = [
        "//src/internal/provider/datasources",
        "//src/internal/provider/resources",
        "//src/internal/provider/types",
        "@com_github_hashicorp_terraform_plugin_framework//datasource",
        "@com_github_hashicorp_terraform_plugin_framework//provider",
        "@com_github_hashicorp_terraform_plugin_framework//provider/schema",
        "@com_github_hashicorp_terraform_plugin_framework//resource",
    ],
)

go_test(
    name = "provider_test",
    srcs = ["provider_test.go"],
    deps = [
        ":provider",
        "@com_github_hashicorp_terraform_plugin_framework//provider",
        "@com_github_hashicorp_terraform_plugin_framework//tfsdk",
        "@com_github_hashicorp_terraform_plugin_go//tftypes",
    ],
)
