load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "credential",
    srcs = glob(
        ["*.go"],
        exclude = ["*_test.go"],
    ),
    importpath = "github.com/kodflow/n8n/src/internal/provider/credential",
    visibility = ["//src/internal/provider:__pkg__"],
    deps = [
        "//sdk/n8nsdk",
        "//src/internal/provider/credential/models",
        "//src/internal/provider/shared/client",
        "@com_github_hashicorp_terraform_plugin_framework//diag",
        "@com_github_hashicorp_terraform_plugin_framework//path",
        "@com_github_hashicorp_terraform_plugin_framework//resource",
        "@com_github_hashicorp_terraform_plugin_framework//resource/schema",
        "@com_github_hashicorp_terraform_plugin_framework//types",
        "@com_github_hashicorp_terraform_plugin_log//tflog",
    ],
)

go_test(
    name = "credential_test",
    srcs = glob(
        ["*_test.go"],
        allow_empty = True,
    ),
    embed = [":credential"],
    deps = [
        "//sdk/n8nsdk",
        "//src/internal/provider/credential/models",
        "//src/internal/provider/shared/client",
        "@com_github_hashicorp_terraform_plugin_framework//attr",
        "@com_github_hashicorp_terraform_plugin_framework//resource",
        "@com_github_hashicorp_terraform_plugin_framework//resource/schema",
        "@com_github_hashicorp_terraform_plugin_framework//tfsdk",
        "@com_github_hashicorp_terraform_plugin_framework//types",
        "@com_github_hashicorp_terraform_plugin_go//tftypes",
        "@com_github_stretchr_testify//assert",
    ],
)
