load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "datasources",
    srcs = [
        "datasources.go",
        "workflow.go",
        "workflows.go",
    ],
    importpath = "github.com/kodflow/n8n/src/internal/provider/datasources",
    visibility = ["//src:__subpackages__"],
    deps = [
        "//src/internal/provider/types",
        "@com_github_hashicorp_terraform_plugin_framework//datasource",
        "@com_github_hashicorp_terraform_plugin_framework//datasource/schema",
        "@com_github_hashicorp_terraform_plugin_framework//types",
    ],
)
