load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "resources",
    srcs = [
        "credential.go",
        "credential_transfer.go",
        "execution_retry.go",
        "project.go",
        "project_user.go",
        "resources.go",
        "source_control_pull.go",
        "tag.go",
        "user.go",
        "variable.go",
        "workflow.go",
        "workflow_transfer.go",
    ],
    importpath = "github.com/kodflow/n8n/src/internal/provider/resources",
    visibility = ["//src:__subpackages__"],
    deps = [
        "//sdk/n8nsdk",
        "//src/internal/provider/types",
        "@com_github_hashicorp_terraform_plugin_framework//path",
        "@com_github_hashicorp_terraform_plugin_framework//resource",
        "@com_github_hashicorp_terraform_plugin_framework//resource/schema",
        "@com_github_hashicorp_terraform_plugin_framework//types",
        "@com_github_hashicorp_terraform_plugin_log//tflog",
    ],
)
