load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "shared",
    srcs = ["pointers.go"],
    importpath = "github.com/kodflow/n8n/src/internal/provider/shared",
    visibility = ["//src:__subpackages__"],
)

go_test(
    name = "shared_test",
    srcs = ["pointers_test.go"],
    embed = [":shared"],
)
