load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "sourcecontrol",
    srcs = glob(
        ["*.go"],
        exclude = ["*_test.go"],
    ),
    importpath = "github.com/kodflow/n8n/src/internal/provider/sourcecontrol",
    visibility = ["//src/internal/provider:__pkg__"],
    deps = [
        "//sdk/n8nsdk",
        "//src/internal/provider/shared/client",
        "//src/internal/provider/sourcecontrol/models",
        "@com_github_hashicorp_terraform_plugin_framework//path",
        "@com_github_hashicorp_terraform_plugin_framework//resource",
        "@com_github_hashicorp_terraform_plugin_framework//resource/schema",
        "@com_github_hashicorp_terraform_plugin_framework//types",
    ],
)

go_test(
    name = "sourcecontrol_test",
    srcs = glob(
        ["*_test.go"],
        allow_empty = True,
    ),
    embed = [":sourcecontrol"],
    deps = [
        "//sdk/n8nsdk",
        "//src/internal/provider/shared/client",
        "//src/internal/provider/sourcecontrol/models",
        "@com_github_hashicorp_terraform_plugin_framework//path",
        "@com_github_hashicorp_terraform_plugin_framework//resource",
        "@com_github_hashicorp_terraform_plugin_framework//tfsdk",
        "@com_github_hashicorp_terraform_plugin_framework//types",
        "@com_github_hashicorp_terraform_plugin_go//tftypes",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//mock",
    ],
)
