load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "user",
    srcs = glob(["*.go"]),
    importpath = "github.com/kodflow/n8n/src/internal/provider/user",
    visibility = ["//src/internal/provider:__pkg__"],
    deps = [
        "//sdk/n8nsdk",
        "//src/internal/provider/shared/client",
        "//src/internal/provider/shared/constants",
        "@com_github_hashicorp_terraform_plugin_framework//datasource",
        "@com_github_hashicorp_terraform_plugin_framework//datasource/schema",
        "@com_github_hashicorp_terraform_plugin_framework//path",
        "@com_github_hashicorp_terraform_plugin_framework//resource",
        "@com_github_hashicorp_terraform_plugin_framework//resource/schema",
        "@com_github_hashicorp_terraform_plugin_framework//types",
    ],
)
