load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "workflow",
    srcs = glob(
        ["*.go"],
        exclude = ["*_test.go"],
    ),
    importpath = "github.com/kodflow/terraform-provider-n8n/src/internal/provider/workflow",
    visibility = ["//src/internal/provider:__pkg__"],
    deps = [
        "//sdk/n8nsdk",
        "//src/internal/provider/shared/client",
        "//src/internal/provider/shared/constants",
        "//src/internal/provider/workflow/models",
        "@com_github_google_uuid//:uuid",
        "@com_github_hashicorp_terraform_plugin_framework//datasource",
        "@com_github_hashicorp_terraform_plugin_framework//datasource/schema",
        "@com_github_hashicorp_terraform_plugin_framework//diag",
        "@com_github_hashicorp_terraform_plugin_framework//path",
        "@com_github_hashicorp_terraform_plugin_framework//resource",
        "@com_github_hashicorp_terraform_plugin_framework//resource/schema",
        "@com_github_hashicorp_terraform_plugin_framework//resource/schema/booldefault",
        "@com_github_hashicorp_terraform_plugin_framework//resource/schema/int64default",
        "@com_github_hashicorp_terraform_plugin_framework//resource/schema/planmodifier",
        "@com_github_hashicorp_terraform_plugin_framework//resource/schema/stringdefault",
        "@com_github_hashicorp_terraform_plugin_framework//resource/schema/stringplanmodifier",
        "@com_github_hashicorp_terraform_plugin_framework//types",
    ],
)

go_test(
    name = "workflow_test",
    srcs = glob(
        ["*_test.go"],
        allow_empty = True,
        exclude = [
            "*_external_test.go",
            "*_acceptance_test.go",
        ],
    ),
    embed = [":workflow"],
    deps = [
        "//sdk/n8nsdk",
        "//src/internal/provider/shared/client",
        "//src/internal/provider/workflow/models",
        "@com_github_hashicorp_terraform_plugin_framework//attr",
        "@com_github_hashicorp_terraform_plugin_framework//datasource",
        "@com_github_hashicorp_terraform_plugin_framework//diag",
        "@com_github_hashicorp_terraform_plugin_framework//resource",
        "@com_github_hashicorp_terraform_plugin_framework//resource/schema",
        "@com_github_hashicorp_terraform_plugin_framework//tfsdk",
        "@com_github_hashicorp_terraform_plugin_framework//types",
        "@com_github_hashicorp_terraform_plugin_go//tftypes",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)

go_test(
    name = "workflow_external_test",
    srcs = glob(
        ["*_external_test.go"],
        allow_empty = True,
        exclude = ["*_acceptance_test.go"],
    ),
    deps = [
        ":workflow",
        "//sdk/n8nsdk",
        "//src/internal/provider/shared/client",
        "@com_github_hashicorp_terraform_plugin_framework//datasource",
        "@com_github_hashicorp_terraform_plugin_framework//path",
        "@com_github_hashicorp_terraform_plugin_framework//resource",
        "@com_github_hashicorp_terraform_plugin_framework//resource/schema",
        "@com_github_hashicorp_terraform_plugin_framework//tfsdk",
        "@com_github_hashicorp_terraform_plugin_go//tftypes",
        "@com_github_stretchr_testify//assert",
    ],
)
