load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "models",
    srcs = [
        "resource.go",
        "transfer_resource.go",
        "workflow_backup.go",
    ],
    importpath = "github.com/kodflow/n8n/src/internal/provider/credential/models",
    visibility = ["//src:__subpackages__"],
    deps = [
        "//sdk/n8nsdk",
        "@com_github_hashicorp_terraform_plugin_framework//types",
    ],
)
