load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "client",
    srcs = ["client.go"],
    importpath = "github.com/kodflow/n8n/src/internal/provider/shared/client",
    visibility = ["//src/internal/provider:__subpackages__"],
    deps = [
        "//sdk/n8nsdk",
    ],
)

go_test(
    name = "client_test",
    srcs = ["client_test.go"],
    embed = [":client"],
    deps = [
        "//sdk/n8nsdk",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
