load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "models",
    srcs = ["provider.go"],
    importpath = "github.com/kodflow/n8n/src/internal/provider/shared/models",
    visibility = ["//src/internal/provider:__subpackages__"],
    deps = [
        "@com_github_hashicorp_terraform_plugin_framework//types",
    ],
)

go_test(
    name = "models_test",
    srcs = ["provider_test.go"],
    embed = [":models"],
    deps = [
        "@com_github_hashicorp_terraform_plugin_framework//types",
        "@com_github_stretchr_testify//assert",
    ],
)
