load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "models",
    srcs = [
        "datasource.go",
        "datasources.go",
        "item.go",
        "resource.go",
    ],
    importpath = "github.com/kodflow/terraform-provider-n8n/src/internal/provider/tag/models",
    visibility = ["//src:__subpackages__"],
    deps = ["@com_github_hashicorp_terraform_plugin_framework//types"],
)
