load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "models",
    srcs = [
        "datasource.go",
        "datasources.go",
        "item.go",
        "resource.go",
        "transfer.go",
    ],
    importpath = "github.com/kodflow/n8n/src/internal/provider/workflow/models",
    visibility = ["//src:__subpackages__"],
    deps = ["@com_github_hashicorp_terraform_plugin_framework//types"],
)

go_test(
    name = "models_test",
    srcs = glob(
        ["*_test.go"],
        allow_empty = True,
    ),
)
