load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "models",
    srcs = [
        "connection_resource.go",
        "datasource.go",
        "datasources.go",
        "item.go",
        "node_resource.go",
        "resource.go",
        "transfer.go",
    ],
    importpath = "github.com/kodflow/terraform-provider-n8n/src/internal/provider/workflow/models",
    visibility = ["//src:__subpackages__"],
    deps = ["@com_github_hashicorp_terraform_plugin_framework//types"],
)
